--- a/pkg/templates/base.layout.tmpl
+++ b/pkg/templates/base.layout.tmpl
@@ -7,13 +7,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    {{ block "css" .}}
+
+    {{ end }}
 </head>
 <body>
 {{ block "content" . }}
 
 {{ end }}
+
+{{ block "js" .}}
+{{ end }}
 </body>
 </html>
-
-
 {{ end }}
