--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -1,11 +1,17 @@
 {{ template "base" .}}
 
 {{define "content"}}
-    <div id="container">
-        <div id="row">
-            <div id="col">
-                <h1> ALVAS envios</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div> Login admin</div>
+            </div>
+            <div class="col">
+                <div> Login clientes</div>
+            </div>
+            <div class="col">
+                <div> Crear usuario</div>
             </div>
         </div>
     </div>
-{{ end}}
+{{ end }}
