--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -15,7 +15,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/main_login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/customers/new_customer">Nuevo usuario</a>
@@ -25,7 +25,6 @@
         </div>
     </nav>
 
-
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -34,18 +33,28 @@
             <div class="carousel-item">
                 <img src="static/images/img2.jpg" class="d-block w-100" alt="2">
             </div>
-            <div class="carousel-item">
-                <img src="static/images/img1.jpg" class="d-block w-100" alt="3">
-            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center mt-3"> Bienvenidos a <strong>Alvas</strong> envíos</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eveniet labore recusandae tempore? Aperiam aspernatur corporis cupiditate dolores illo laborum minus nihil odit officiis, quae quam quisquam, ratione tenetur, unde.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aspernatur atque beatae cum dignissimos ea, eius eum illum magni neque non omnis provident quidem quisquam, sint tempore. Consectetur, voluptatibus?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloremque illum labore molestiae officia quasi sit suscipit ullam. Dolore dolorem eius est illum nam neque quae quod sit voluptatibus? Inventore?</p>
+            </div>
+        </div>
     </div>
 
 {{ end }}
