--- a/pkg/templates/login.page.tmpl
+++ b/pkg/templates/login.page.tmpl
@@ -1,7 +1,7 @@
 {{ template "base" .}}
 
 {{define "content"}}
-    <form>
+    <form action="" method="POST">
         <div class="mb-3">
             <label for="emailInput" class="form-label">Email</label>
             <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
