--- a/pkg/templates/login.page.tmpl
+++ b/pkg/templates/login.page.tmpl
@@ -1,28 +1,30 @@
 {{ template "base" .}}
 
 {{define "content"}}
-    <form action="/main_login" method="POST">
-        <div class="mb-3">
-            <label for="emailInput" class="form-label">Email</label>
-            <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">Tu direccion no va a ser compartida.</div>
-        </div>
-        <div class="mb-3">
-            <label for="passwordInput" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="passwordInput">
-        </div>
-        <div class="mb-3 form-check">
-            <input class="form-check-input" type="radio" name="userType" id="userAdminRadio" value="admin">
-            <label class="form-check-label" for="userAdminRadio">ADMIN</label>
-        </div>
-        <div class="mb-3 form-check">
-            <input class="form-check-input" type="radio" name="userType" id="userCustomerRadio" value="customer">
-            <label class="form-check-label" for="userCustomerRadio">Customer</label>
-        </div>
-        <div class="mb-3 form-check">
-            <input class="form-check-input" type="radio" name="userType" id="userDeliveryRadio" value="delivery">
-            <label class="form-check-label" for="userDeliveryRadio">Delivery</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    {{ if .IsLoginReq }}
+        <form action="/main_login" method="POST">
+            <div class="mb-3">
+                <label for="emailInput" class="form-label">Email</label>
+                <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Tu direccion no va a ser compartida.</div>
+            </div>
+            <div class="mb-3">
+                <label for="passwordInput" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="passwordInput">
+            </div>
+            <div class="mb-3 form-check">
+                <input class="form-check-input" type="radio" name="userType" id="userAdminRadio" value="admin">
+                <label class="form-check-label" for="userAdminRadio">ADMIN</label>
+            </div>
+            <div class="mb-3 form-check">
+                <input class="form-check-input" type="radio" name="userType" id="userCustomerRadio" value="customer">
+                <label class="form-check-label" for="userCustomerRadio">Customer</label>
+            </div>
+            <div class="mb-3 form-check">
+                <input class="form-check-input" type="radio" name="userType" id="userDeliveryRadio" value="delivery">
+                <label class="form-check-label" for="userDeliveryRadio">Delivery</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    {{ end }}
 {{ end }}
