--- a/pkg/templates/login.page.tmpl
+++ b/pkg/templates/login.page.tmpl
@@ -40,7 +40,7 @@
                                 <button type="submit" class="btn btn-primary">Log in</button>
                             </div>
                             <div class="col mb-2">
-                                <a href="/register">Registrarse</a>
+                                <a  href="/customers?type=form">Registrarse</a>
                             </div>
                         </div>
                     </form>
