--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -1,33 +1,16 @@
 {{ template "base" .}}
-
 {{define "content"}}
+    {{$IsLogged := .IsLogged}}
+    {{$customerName := .CustomerName}}
     {{ template "nav" .}}
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="static/images/img1.jpg" class="d-block w-100" alt="1">
-            </div>
-            <div class="carousel-item">
-                <img src="static/images/img2.jpg" class="d-block w-100" alt="2">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
+    {{if not $IsLogged}}
+        {{ template "carousel" .}}
+    {{end}}
     <div class="container">
         <div class="row">
             <div class="col">
-                {{if .IsLogged }}
-                    <h1 class="text-center mt-3"> Bienvenido {{.Name}}</h1>
+                {{if $IsLogged }}
+                    <h1 class="text-center mt-3"> Bienvenido {{.CustomerName}}</h1>
                 {{else}}
                     <h1 class="text-center mt-3"> Bienvenidos a <strong>Alvas</strong> envíos</h1>
                 {{end}}
