--- a/pkg/templates/login.page.tmpl
+++ b/pkg/templates/login.page.tmpl
@@ -7,7 +7,7 @@
             <div class="row mt-4">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <h2 class="text-center"> Alvas envios -  inicio de sesión </h2>
+                    <h2 class="text-center"> Alvas envios - inicio de sesión </h2>
                     <form action="/main_login" method="POST">
                         <div class="form-outline mb-4">
                             <label for="emailInput" class="form-label">Email</label>
@@ -40,7 +40,7 @@
                                 <button type="submit" class="btn btn-primary">Log in</button>
                             </div>
                             <div class="col mb-2">
-                                <a  href="/customers?type=form">Registrarse</a>
+                                <a href="/customers">Registrarse</a>
                             </div>
                         </div>
                     </form>
