--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -8,26 +8,23 @@
     {{end}}
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col mb-12">
                 {{if $IsLogged }}
-                    <h1 class="text-center mt-3"> Bienvenido {{.CustomerName}}</h1>
-                {{else}}
-                    <h1 class="text-center mt-3"> Bienvenidos a <strong>Alvas</strong> envíos</h1>
-                {{end}}
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eveniet labore recusandae
-                    tempore?
-                    Aperiam aspernatur corporis cupiditate dolores illo laborum minus nihil odit officiis, quae quam
-                    quisquam,
-                    ratione tenetur, unde.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi aspernatur atque beatae cum
-                    dignissimos
-                    ea, eius eum illum magni neque non omnis provident quidem quisquam, sint tempore. Consectetur,
-                    voluptatibus?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloremque illum labore molestiae
-                    officia quasi
-                    sit suscipit ullam. Dolore dolorem eius est illum nam neque quae quod sit voluptatibus?
-                    Inventore?</p>
+                <h1 class="text-center mt-3"> Bienvenido {{.CustomerName}}</h1>
             </div>
+            <div class="row justify-content-center mb-2">
+                <div class="col-2 text-center">
+                    <button type="button" class="btn btn-primary">Nuevo envio</button>
+                </div>
+
+                <div class="col-2 text-center">
+                    <button type="button" class="btn btn-primary">Ver envios</button>
+                </div>
+            </div>
+            {{else}}
+                <h1 class="text-center mt-3"> Bienvenidos a <strong>Alvas</strong> envíos</h1>
+            {{end}}
         </div>
+
     </div>
 {{end}}
