--- a/pkg/templates/login.page.tmpl
+++ b/pkg/templates/login.page.tmpl
@@ -8,7 +8,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <h2 class="text-center"> Alvas envios - inicio de sesión </h2>
-                    <form action="/main_login" method="POST">
+                    <form action="/login" method="POST">
                         <div class="form-outline mb-4">
                             <label for="emailInput" class="form-label">Email</label>
                             <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp">
