--- a/pkg/templates/nav.layout.tmpl
+++ b/pkg/templates/nav.layout.tmpl
@@ -9,11 +9,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{if .IsLogged}}#{{else}}/{{end}}">Home</a>
                     </li>
                     {{ if not .IsLogged }}
                         <li class="nav-item">
-                            <a class="nav-link" href="/main_login">Login</a>
+                            <a class="nav-link" href="/login">Login</a>
                         </li>
                     {{end}}
                 </ul>
