add delivery form

--- a/pkg/templates/new.customer.page.tmpl
+++ b/pkg/templates/new.customer.page.tmpl
@@ -6,6 +6,7 @@
         <form method="POST" id="newCustomer" class="row g-3">
             {{ .Data.csrfField }}
             {{$formData := .Data }}
+            <input type="hidden" value="{{ .Data.csrfField }}">
             <div class="col-md-6">
                 <label for="validationDefault01" class="form-label">Nombre</label>
                 <input type="text" class="form-control" name="name" id="validationDefault01" required>
