--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -19,7 +19,7 @@
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Direccion</th>
+                        <th scope="col">Dirección</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -34,7 +34,7 @@
 
             <div class="row justify-content-center mb-2">
                 <div class="col-2 text-center">
-                    <button type="button" class="btn btn-primary">Nuevo envio</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='/send-package';">Nuevo envio</button>
                 </div>
 
                 <div class="col-2 text-center">
