--- a/pkg/templates/home.page.tmpl
+++ b/pkg/templates/home.page.tmpl
@@ -34,7 +34,9 @@
 
             <div class="row justify-content-center mb-2">
                 <div class="col-2 text-center">
-                    <button type="button" class="btn btn-primary" onclick="location.href='/send-package';">Nuevo envio</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='/delivery/send-package';">
+                        Nuevo envio
+                    </button>
                 </div>
 
                 <div class="col-2 text-center">
