--- a/pkg/templates/new.customer.page.tmpl
+++ b/pkg/templates/new.customer.page.tmpl
@@ -8,8 +8,8 @@
             {{$formData := .Data }}
             <input type="hidden" value="{{ .Data.csrfField }}">
             <div class="col-md-6">
-                <label for="validationDefault01" class="form-label">Nombre</label>
-                <input type="text" class="form-control" name="name" id="validationDefault01" required>
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" class="form-control" name="name" id="name" required>
             </div>
 
             <div class="col-md-6">
@@ -21,13 +21,13 @@
                 <input type="text" class="form-control" name="email" id="email" required>
             </div>
             <div class="col-12">
-                <label for="validationDefault05" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" name="password" id="validationDefault05" required>
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" name="password" id="password" required>
             </div>
             <div class="col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                    <label class="form-check-label" for="invalidCheck2">
+                    <input class="form-check-input" type="checkbox" value="" id="tyc" required>
+                    <label class="form-check-label" for="tyc">
                         Acepto terminos y condiciones
                     </label>
                 </div>
